# KimLabISI

./: .gitignore  ACQUISITION_WORKFLOW_AUDIT.md  ANALYSIS_INTEGRATION_AUDIT.md  ANALYSIS_INTEGRATION_IMPLEMENTATION.md  ANALYSIS_PIPELINE_COMPLETE_AUDIT.md  ANALYSIS_PIPELINE_COMPREHENSIVE_AUDIT.md  ANALYSIS_RENDERING_REFACTOR_COMPLETE.md  ANALYSIS_RGB_TO_GRAYSCALE_FIX.md  ANALYSIS_VIEWPORT_SHARED_MEMORY_FIX.md  ARCHITECTURE_CLEANUP_AUDIT.md  AUDIT_REPORT.md  AUDIT_REPORT_CAMERA_TRIGGERED.md  PLAYBACK_AUDIT_REPORT.md  README.md  RECORDING_ANALYSIS_INVESTIGATION.md  TIMING_DATA_FLOW_AUDIT.md  TYPESCRIPT_FIX_AND_ARCHITECTURE_AUDIT.md  electron.vite.config.mjs  isi_parameters.json  isi_parameters.json.backup  isi_parameters.json.tmp  package-lock.json  package.json  pyproject.toml  run.py  run.sh  setup_and_run.sh  tailwind.config.js  vite.config.ts
backend/: main.py  pyproject.toml  pytest.ini
backend/reports/: dead_code_report.md
backend/scripts/: architecture_verification.py  final_validation.py  run_vulture.sh  test_suite_verification.py
backend/src/application/algorithms/: fourier_analysis.py  pattern_generators.py  spherical_transform.py
backend/src/application/handlers/: command_handler.py  query_handler.py  state_broadcaster.py
backend/src/application/services/: communication_service.py  error_orchestrator.py  monitoring_service.py  state_persistence.py
backend/src/application/use_cases/: analysis_pipeline.py  data_acquisition.py  error_recovery.py  hardware_calibration.py  session_management.py  spatial_setup.py  stimulus_generation.py  system_startup.py
backend/src/domain/entities/: dataset.py  hardware.py  parameters.py  workflow_state.py  workflow_state_machine.py
backend/src/domain/repositories/: config_repository.py  data_repository.py  experiment_repository.py  hardware_repository.py
backend/src/domain/services/: dataset_repository.py  error_handler.py  isi_analyzer.py  parameter_validator.py  stimulus_calculator.py  workflow_orchestrator.py
backend/src/domain/value_objects/: parameters.py  stimulus_params.py  stream_config.py  workflow_state.py
backend/src/infrastructure/communication/: ipc_server.py
backend/src/infrastructure/hardware/: factory.py
backend/src/infrastructure/macos/: macos_timing.py  metal_gpu.py  mock_processing.py
backend/src/infrastructure/monitoring/: system_monitor.py
backend/src/infrastructure/storage/: hdf5_repository.py  session_repository.py
backend/src/isi_control/: main.py  main_old.py
backend/tests/: conftest.py  run_tests.py
backend/tests/integration/: test_backend_main.py  test_calibration_integration.py  test_communication_integration.py  test_monitoring_integration.py  test_workflow_integration.py
backend/tests/mocks/hardware/: mock_camera.py
backend/tests/scripts/: final_validation.py
backend/tests/smoke/: __init__.py  test_core_functionality.py  test_documented_functionality.py  test_websocket_communication.py
backend/tests/unit/application/: test_command_handler.py  test_communication_service.py  test_monitoring_service.py  test_pattern_generator_parameters.py  test_query_handler.py  test_state_broadcaster.py  test_state_persistence.py  test_stimulus_generation_complete.py  test_stimulus_generation_parameters.py  test_stimulus_generation_visual.py
backend/tests/unit/domain/: test_dataset_entities.py  test_dataset_repository.py  test_hardware_entities.py  test_parameter_validator.py  test_parameters_entities.py  test_parameters_value_objects.py  (+2 more)
(+508 files in other folders)
